@@ -92,6 +92,12 @@ Magick::Image::Image( const std::string &imageSpec_ )
     {
       // FIXME: need a way to report warnings in constructor
     }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
+    }
 }
 
 // Construct a blank image canvas of specified size and color
@@ -115,6 +121,12 @@ Magick::Image::Image( const Geometry &size_,
     {
       // FIXME: need a way to report warnings in constructor
     }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
+    }
 }
 
 // Construct Image from in-memory BLOB
@@ -129,6 +141,12 @@ Magick::Image::Image ( const Blob &blob_ )
   catch ( const Warning & /*warning_*/ )
     {
       // FIXME: need a way to report warnings in constructor
+    }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
     }
 }
 
@@ -146,6 +164,12 @@ Magick::Image::Image ( const Blob &blob_,
     {
       // FIXME: need a way to report warnings in constructor
     }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
+    }
 }
 
 // Construct Image of specified size and depth from in-memory BLOB
@@ -162,6 +186,12 @@ Magick::Image::Image ( const Blob &blob_,
   catch ( const Warning & /*warning_*/ )
     {
       // FIXME: need a way to report warnings in constructor
+    }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
     }
 }
 
@@ -181,6 +211,12 @@ Magick::Image::Image ( const Blob &blob_,
     {
       // FIXME: need a way to report warnings in constructor
     }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
+    }
 }
 
 // Construct Image of specified size, and format from in-memory BLOB
@@ -197,6 +233,12 @@ Magick::Image::Image ( const Blob &blob_,
   catch ( const Warning & /*warning_*/ )
     {
       // FIXME: need a way to report warnings in constructor
+    }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
     }
 }
 
@@ -216,6 +258,12 @@ Magick::Image::Image ( const unsigned int width_,
   catch ( const Warning & /*warning_*/ )
     {
       // FIXME: need a way to report warnings in constructor
+    }
+  catch ( const Error & error_ )
+    {
+      // Release resources
+      delete _imgRef;
+      throw;
     }
 }
 
