@@ -53,6 +53,14 @@
 </tr>
 </table>
 <p>
+2004-02-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/montage.c (MontageImages): Fix leak of texture image (big
+        leak).
+
+</UL>
+<p>
 2004-02-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
